# rekord-lib

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/: commit.md  frontend-design.md  refactor.md  test-gen.md
.claude/skills/anthropic-frontend-design/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/brand/: STYLEGUIDE.md  theme.ts
public/: site.webmanifest
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: ffmpeg-aarch64-apple-darwin  ffprobe-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  jobs.rs  lib.rs  main.rs  models.rs
src-tauri/src/audio/: compat.rs  convert.rs  dedupe.rs  fingerprint.rs  mod.rs  probe.rs
src-tauri/src/bandcamp/: collection.rs  download.rs  mod.rs  session.rs
src-tauri/src/metadata/: artwork.rs  discogs.rs  mod.rs  net.rs  read.rs  suggest.rs  write.rs
src/components/: AppHeader.tsx  BandcampPanel.tsx  BandcampView.test.tsx  BandcampView.tsx  BulkMetadataEditor.test.tsx  BulkMetadataEditor.tsx  CoverThumb.tsx  DuplicatesModal.tsx  HeaderNav.tsx  LibraryView.tsx  MarqueeText.test.tsx  MarqueeText.tsx  MetadataEditor.test.tsx  MetadataEditor.tsx  PlayerBar.tsx  SettingsView.tsx  icons.tsx
src/lib/: api.ts  bandcampCache.ts  bandcampDownloads.test.ts  bandcampDownloads.ts  bandcampSync.test.ts  bandcampSync.ts  dupAlbums.test.ts  dupAlbums.ts  duplicates.ts  folderTree.test.ts  folderTree.ts  format.test.ts  format.ts  grouping.test.ts  grouping.ts  library.ts  librarySync.test.ts  librarySync.ts  player.test.ts  player.tsx  settings.test.ts  settings.ts  updater.test.ts  updater.ts  useBandcamp.ts  useScrolled.test.ts  useScrolled.ts
src/styles/: theme.ts  tokens.css
src/test/: factories.ts  setup.ts
(+1 files in other folders)
