[package]
name = "rekord-lib"
version = "0.4.3"
description = "Prepare audio files for CDJ/XDJ and Rekordbox (conversion, metadata, duplicate detection, Bandcamp)."
authors = ["Tim Heinrichs"]
edition = "2021"
license = "MIT"
repository = "https://github.com/timheinrichs/rekord-lib"
homepage = "https://github.com/timheinrichs/rekord-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rekord_lib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["fs", "io-util", "process"] }
thiserror = "2"
base64 = "0.22"
zip = "2"
rusty-chromaprint = "0.3"
trash = "5.2.6"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-window-state = "2.4.1"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"

[dev-dependencies]
tempfile = "3"

# Abhängigkeiten auch im Dev-Build optimieren – macht die Chromaprint-/FFT-
# Berechnung der Duplikatsuche im Dev-Modus um ein Vielfaches schneller,
# ohne die Kompilierzeit des eigenen Codes zu erhöhen.
[profile.dev.package."*"]
opt-level = 3

